// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiNotificationBadge is rendered 1`] = `
<span
  aria-label="aria-label"
  class="euiNotificationBadge testClass1 testClass2 emotion-euiNotificationBadge-s-accent"
  data-test-subj="test subject string"
>
  5
</span>
`;

exports[`EuiNotificationBadge props color accent is rendered 1`] = `
<span
  class="euiNotificationBadge emotion-euiNotificationBadge-s-accent"
>
  5
</span>
`;

exports[`EuiNotificationBadge props color subdued is rendered 1`] = `
<span
  class="euiNotificationBadge emotion-euiNotificationBadge-s-subdued"
>
  5
</span>
`;

exports[`EuiNotificationBadge props size m is rendered 1`] = `
<span
  class="euiNotificationBadge emotion-euiNotificationBadge-m-accent"
>
  5
</span>
`;

exports[`EuiNotificationBadge props size s is rendered 1`] = `
<span
  class="euiNotificationBadge emotion-euiNotificationBadge-s-accent"
>
  5
</span>
`;
